# Rag-chat-memory

./: .env.example  .gitignore  Dockerfile  README.md  main.py  memory.db  pyproject.toml  requirements.txt  start-local.sh  start.sh
backend/: app.py
backend/executor/: comparer.py  sandbox.py  tester.py
backend/ingestion/: chunker.py  embedder.py  indexer.py  loader.py
backend/memory/: chat_memory.py  progress_store.py
backend/rag/: chain.py  prompt_templates.py  retriever.py
backend/study/: mastery_logic.py  syllabus_builder.py
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/code-lab/: page.tsx
frontend/src/app/study-plan/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: Header.tsx
src/: cust_logger.py  ingest_documents.py  memory.db  server.py  settings.py
src/ai_companion/: settings.py
src/ai_companion/core/: prompts.py
src/ai_companion/data/: sample_document.md
src/ai_companion/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py  helpers.py  schemas.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/streamlit/: app.py  app1.py  app2.py
src/ai_companion/interfaces/whatsapp/: webhook_endpoint.py  (+1 more)
src/chatbot/: settings.py
src/chatbot/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.css  App.jsx  App.tsx  index.css  index.tsx
src/tests/: test.py  test_all.py  test_stt.py  test_tts.py
(+29 files in other folders)
