[project]
name = "rag-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google>=3.0.0",
    "google-genai>=1.29.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.73",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.4",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
]
